objects/ssot__OpportunityInfluence__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AttributionModelId__c</fullName>
        <label>Attribution Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Opportunity Influence Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InfluencePercent__c</fullName>
        <label>Influence Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationId__c</fullName>
        <label>Publication</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationObject__c</fullName>
        <label>Publication Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RevenueShareAmount__c</fullName>
        <label>Revenue Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceId__c</fullName>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545877914_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityInfluence_OpportunityId_m_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>OpportunityInfluence_OpportunityId_m_rel</relationshipLabel>
        <relationshipName>rel_1718545877914_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546696676_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityInfluence_IndividualId_ma_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>OpportunityInfluence_IndividualId_ma_rel</relationshipLabel>
        <relationshipName>rel_1718546696676_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549029582_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityInfluence_CampaignId_map__rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>OpportunityInfluence_CampaignId_map__rel</relationshipLabel>
        <relationshipName>rel_1718549029582_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>